--- a/src/app/hte/hte.component.html
+++ b/src/app/hte/hte.component.html
@@ -1,5 +1,5 @@
 <div class="boundary">
-    <h2 class="title">How about you?</h2>
+    <h2 class="section-title">How about you?</h2>
     <div class="recipes">
         <div class="recipe">
             <h3>Achieves</h3>
