--- a/src/app/scrap/scrap.component.html
+++ b/src/app/scrap/scrap.component.html
@@ -1,7 +1,7 @@
 <div class="boundary expend">
-    <div class="title">
+    <div class="section-title">
         <h2>관련글</h2>
-        <p>꽃송이버섯 자세히 알기</p>
+        <p>우리 농산물 자세히 알기</p>
     </div>
     <div class="scrap-box">
         <div *ngFor="let scrap of scraps" class="article">
