--- a/src/app/store/store.component.html
+++ b/src/app/store/store.component.html
@@ -1,5 +1,5 @@
 <div class="boundary">
-    <div class="title">
+    <div class="section-title">
         <h2>상품주문</h2>
         <p>생산자가 직접 판매해 유통마진 없는 착한 가격</p>
     </div>
@@ -28,13 +28,59 @@
                 <div class="right">
                     <ng-template [ngIf]="!product.soldout">
                         <h4>수량</h4>
-                        <a class="pm-buttons minus" (mouseover)="activeCover(i, '장바구니 빼기')" (mouseout)="inactiveCover(i)" href="#" (click)="remove($event, i)"><i></i></a><span class="quantity" [attr.data-quantity]="product.quantity">{{product.quantity|withComma}}</span><a class="pm-buttons plus" (mouseover)="activeCover(i, '장바구니 담기')" (mouseout)="inactiveCover(i)" href="#"  (click)="add($event, i)"><i></i></a>
+                        <a class="pm-buttons minus" (mouseover)="activeCover(i, '장바구니 빼기')" (mouseout)="inactiveCover(i)" href="#" (click)="remove($event, i)"><i></i></a>
+                        <span
+                            class="quantity" [attr.data-quantity]="product.quantity">{{product.quantity|withComma}}</span><a class="pm-buttons plus" (mouseover)="activeCover(i, '장바구니 담기')"
+                                (mouseout)="inactiveCover(i)" href="#" (click)="add($event, i)"><i></i></a>
                     </ng-template>
                     <ng-template [ngIf]="product.soldout">
                         <span class="soldout-msg">품절</span><a class="soldout-reason">(?)</a>
                     </ng-template>
                 </div>
             </div>
+        </div>
+    </div>
+    <div class="notice">
+        <div class="left">
+            <h4>배송 안내</h4>
+            <ul>
+                <li>예상배송기간은 대금 지급일로부터 2~5일입니다.</li>
+                <li>배송비는 {{shipping|withComma}}원입니다. 단 도서산간 지역은 별도의 배송비가 추가될 수 있습니다.</li>
+            </ul>
+            <h4>반품 및 교환 불가능 사유</h4>
+            <ul>
+                <li>농산품의 경우 반품 시 상품가치가 하락하여 재판매가 불가합니다. 따라서 수령 후 단순변심에 의한 교환 및 반품은 불가합니다.</li>
+                <li>수취인 정보를 잘 못 기재해 미배송되는 경우</li>
+                <li>구매자의 책임 있는 사유로 상품이 훼손된 경우</li>
+            </ul>
+        </div>
+        <div class="right">
+            <h4>반품 및 교환 안내</h4>
+            <ul>
+                <li>주문변경/취소는 배송 전에 가능하며 사전에 전화 또는 문자 바랍니다.</li>
+                <li>반품 시 주문자명, 연락처, 간단한 사유를 적어 같이 보내주시면 빠른처리가 가능합니다.</li>
+                <li>상품의 하자가 아닌 경우 배송비용은 구매자 부담입니다.<br>(상품의 하자가 있으면 판매자 부담)</li>
+            </ul>
+            <table cellspacing="0" border="1">
+                <colgroup>
+                    <col width="90">
+                    <col>
+                </colgroup>
+                <tbody>
+                    <tr>
+                        <th>반품배송비</th>
+                        <td>구매자 부담 (최초 배송비 무료인 경우 {{shipping|withComma}}원 추가 부과)</td>
+                    </tr>
+                    <tr>
+                        <th>교환배송비</th>
+                        <td>왕복 비용 구매자 부담</td>
+                    </tr>
+                    <tr>
+                        <th>보내실 곳</th>
+                        <td>경상북도 상주시 모동면 이동6길 117</td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
     </div>
 </div>
