--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -35,7 +35,7 @@ button {
     padding:0;
     border:0;
 }
-dl, dt, dd {
+dl, dt, dd, ul {
     margin:0;
     padding:0;
 }
@@ -77,7 +77,7 @@ a {
             margin: 0 auto;
             max-width: $pageWidth;
         }
-        & .title {
+        & .section-title {
             margin-bottom: 55px;
             text-align: center;
             & h2 {
