--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
-<header [class.floating]="topNavfloating"></header>
+<header></header>
+<header class="second-header" [class.floating]="topNavfloating"></header>
 <div class="content">
     <section id="media" class="media"></section>
     <section id="intro" class="intro"></section>
