--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,2 +1,4 @@
-<div class="logo"><h2>Navigation</h2></div>
+<div class="logo">
+    <h1><a href="/"><span class="logo-image">두리산버섯</span></a></h1>
+</div>
 <div class="menu"></div>
