--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -1,31 +1,56 @@
 header {
-    position: fixed;
+    position: relative;
     z-index: 10;
     top: 0;
     width: 100%;
-    height: 85px;
-    background: transparent;
-    padding: 35px 50px 0 50px;
-    @include transition(opacity .6s ease);
+    height: 45px;
+    background: #fff;
+    padding: 0 50px 0 50px;
+    margin-top: 35px;
+    @include transition(opacity .3s ease);
     @media screen and (max-width: 980px) {
-        padding: 20px 5px 0 5px;
+        display: none;
+        padding: 20px 15px 0 25px;
+    }
+    &.second-header {
+        position: fixed;
+        margin-top: 0;
+        top: -45px;
+        opacity: 0;
+        & .menu {
+            color: $titleColor !important;
+            @media screen and (max-width: 980px) {
+                margin-right: 0;
+                & ul li {
+                    margin-right: 15px !important;
+                }
+            }
+            & ul li {
+                font-size: 15px;
+                margin-right: 40px;
+            }
+        }
     }
     &.hidden {
         opacity: 0;
     }
     &.floating {
-        top: -28px;
-        background: rgba(255, 255, 255, 0.8);
-        opacity: 1 !important;
+        opacity: 1;
+        top: 0;
+        border-bottom: 1px solid #e1e1e1;
         @media screen and (max-width: 980px) {
+            display: block;
             top: -20px;
             height: 65px;
             & .logo {
                 color: $titleColor;
             }
         }
-        & .menu {
-            color: $titleColor !important;
+        & .logo h1 .logo-image {
+            line-height: 45px;
+            width: 90px;
+            text-indent: inherit;
+            background: transparent;
         }
     }
     & .logo {
@@ -34,9 +59,20 @@ header {
         @media screen and (max-width: 980px) {
             color: #fff;
         }
-        & h2 {
-            margin: 10px 35px;
-            font-size: 19px;
+        & h1 {
+            margin: 0;
+            font-size: 17px;
+            font-weight: bolder;
+            & .logo-image {
+                display: block;
+                overflow: hidden;
+                width: 175px;
+                height: 45px;
+                background-position: 0 0;
+                text-indent: 101%;
+                white-space: nowrap;
+                background: transparent url("/assets/images/logo_doori.png") no-repeat;
+            }
         }
     }
     & .menu {
@@ -56,11 +92,12 @@ header {
                 display: inline-block;
                 text-align: center;
                 margin-right: 50px;
-                font-size: 16px;
-                line-height: 50px;
+                font-size: 19px;
+                font-weight: 300;
+                line-height: 45px;
                 @media screen and (max-width: 980px) {
                     font-size: 15px;
-                    margin-right: 30px;
+                    margin-right: 25px;
                     &:nth-child(1), &:nth-child(4) {
                         display: none;
                     }
