--- a/src/styles/_intro.scss
+++ b/src/styles/_intro.scss
@@ -48,8 +48,9 @@
             }
             & h2 {
                 font-size: 32px;
-                line-height: 43px;
+                line-height: 1.5;
                 text-align: left;
+                word-break: keep-all;
             }
             & p {
                 max-width: 650px;
