--- a/src/styles/_media.scss
+++ b/src/styles/_media.scss
@@ -155,7 +155,7 @@
                             margin: 0;
                             font-size: 27px;
                             font-weight: 400;
-                            line-height: 36px;
+                            line-height: 1.5;
                             color: #fff;
                         }
                         & p {
