--- a/src/app/store/store.component.html
+++ b/src/app/store/store.component.html
@@ -46,6 +46,7 @@
             <ul>
                 <li>예상배송기간은 대금 지급일로부터 2~5일입니다.</li>
                 <li>배송비는 {{shipping|withComma}}원입니다. 단 도서산간 지역은 별도의 배송비가 추가될 수 있습니다.</li>
+                <li>포도는 아무리 포장을 잘해도 알이 터질 수 있습니다.</li>
             </ul>
             <h4>반품 및 교환 불가능 사유</h4>
             <ul>
