--- a/src/app/media/box.component.html
+++ b/src/app/media/box.component.html
@@ -1,8 +1,8 @@
 <ng-template [ngIf]="args.type=='a' || args.type=='b'">
     <div class="source">
-            <youtube-player *ngIf="!isMobile && args.videos[0]" [videoId]="args.videos[0]" [width]="args.type == 'a' ? 890 : 400" [height]="550" [playerVars]="playerOptions" (ready)="setPlayer($event, 0)" (change)="onStateChange($event, 0)"></youtube-player>   
+            <youtube-player *ngIf="!isMobile && args.videos[0]" [videoId]="args.videos[0]" [width]="args.type == 'a' ? 890 : 400" [height]="550" [playerVars]="playerOptions" (ready)="setPlayer($event, 0)" (change)="onStateChange($event, 0)"></youtube-player>
     </div>
-    <div class="cover">
+    <div class="cover" (mouseenter)="mouseOver(0)" (mouseleave)="mouseOut()" [class.focus]="coverViewStates[0] == 'inactive'">
         <div class="image" [@fade]="coverImageViewStates[0]" [style.background-image]="'url('+args.images[0]+')'"></div>
         <div class="bg"></div>
         <div class="typo">
@@ -17,7 +17,7 @@
         <div class="source">
             <!-- <youtube-player *ngIf="args.videos[0]" [videoId]="args.videos[0]" [width]="400" [height]="275" [playerVars]="playerOptions" (ready)="setPlayer($event, 0)" (change)="onStateChange($event, 0)"></youtube-player> -->
         </div>
-        <div class="cover">
+        <div class="cover" (mouseenter)="mouseOver(0)" (mouseleave)="mouseOut()" [class.focus]="coverViewStates[0] == 'inactive'">
             <div class="image" [@fade]="coverImageViewStates[0]" [style.background-image]="'url('+args.images[0]+')'"></div>
             <div class="bg"></div>
         </div>
@@ -26,7 +26,7 @@
         <div class="source">
             <!-- <youtube-player *ngIf="args.videos[1]" [width]="430" [height]="300" [playerVars]="playerOptions" (ready)="setPlayer($event, 1)" (change)="onStateChange($event, 1)"></youtube-player> -->
         </div>
-        <div class="cover">
+        <div class="cover" (mouseenter)="mouseOver(1)" (mouseleave)="mouseOut()" [class.focus]="coverViewStates[1] == 'inactive'">
             <div class="image" [@fade]="coverImageViewStates[1]" [style.background-image]="'url('+args.images[1]+')'"></div>
             <div class="bg"></div>
             <div class="typo">
