--- a/src/styles/_media.scss
+++ b/src/styles/_media.scss
@@ -56,7 +56,7 @@
                     & h2 {
                         margin-bottom: 0;
                         font-size: 32px;
-                        font-weight: 400;
+                        font-weight: normal;
                         line-height: 38px;
                         color: $titleColor;
                     }
@@ -129,10 +129,19 @@
                     width: 100%;
                     height: 100%;
                     overflow: hidden;
+                    &.focus {
+                        & .image {
+                            transform: scale(1.05, 1.05);
+                        }
+                        & .bg {
+                            opacity: .4;
+                        }
+                    }
                     & .image {
                         width: 100%;
                         height: 100%;
                         background: transparent no-repeat center center/cover;
+                        @include transition(all .45s ease);
                     }
                     & .bg {
                         position: absolute;
@@ -141,7 +150,8 @@
                         width: 100%;
                         height: 100%;
                         background-color: #000;
-                        opacity: .25;
+                        opacity: 0;
+                        @include transition(opacity .6s ease);
                     }
                     & .typo {
                         position: absolute;
@@ -150,20 +160,20 @@
                         color: #fff;
                         width: 100%;
                         padding: 55px 45px;
-                        word-break: keep-all;
+                        text-align: justify;
                         & h2 {
                             margin: 0;
                             font-size: 27px;
-                            font-weight: 400;
+                            font-weight: normal;
                             line-height: 1.5;
                             color: #fff;
                         }
                         & p {
                             margin: 8px 0 0 0;
                             font-size: 17px;
-                            font-weight: 300;
+                            font-weight: 200;
                             line-height: 1.3;
-                            opacity: .8;
+                            opacity: .9;
                         }
                         & .date {
                             font-size: 15px;
