--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -24,7 +24,7 @@ footer {
                 height: 55px;
                 background: #039be5;
                 color: #fff;
-                font-size: 27px;
+                font-size: 1.688em;
                 font-weight: bold;
                 text-align: center;
                 line-height: 50px;
@@ -35,7 +35,7 @@ footer {
             width: 50%;
             margin-left: -4px;
             & .info {
-                font-size: 14px;
+                font-size: 0.875em;
                 line-height: 24px;
                 @media screen and (max-width: 980px) {
                     & .bar {
@@ -60,7 +60,7 @@ footer {
                     color: #c1c1c1;
                     padding-left: 5px;
                     padding-right: 1px;
-                    font-size: 12px;
+                    font-size: 0.750em;
                     vertical-align: top;
                 }
             }
