--- a/src/styles/_intro.scss
+++ b/src/styles/_intro.scss
@@ -47,7 +47,7 @@
                 margin-left: 420px;
             }
             & h2 {
-                font-size: 32px;
+                font-size: 2.000em;
                 line-height: 1.5;
                 text-align: left;
                 word-break: keep-all;
@@ -56,7 +56,7 @@
                 max-width: 650px;
                 text-align: justify;
                 margin-top: 25px;
-                font-size: 18px;
+                font-size: 1.125em;
                 line-height: 1.5;
             }
             & .source-link {
@@ -82,7 +82,7 @@
                     }
                     & dd {
                         margin-top: 5px;
-                        font-size: 14px;
+                        font-size: 0.875em;
                         &.link-btn {
                             margin-top: 20px;
                             padding: 0;
