--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -22,6 +22,7 @@ body {
     padding: 0;
     color: $baseColor;
     font-weight: 300;
+    font-size: 16px;
 }
 app-root {
     position: relative;
@@ -81,12 +82,12 @@ a {
             margin-bottom: 55px;
             text-align: center;
             & h2 {
-                font-size: 32px;
+                font-size: 2.000em;
                 line-height: 43px;
             }
             & p {
                 margin-top: 8px;
-                font-size: 17px;
+                font-size: 1.063em;
             }
             
         }
