--- a/src/styles/_intro.scss
+++ b/src/styles/_intro.scss
@@ -14,6 +14,10 @@
         background-size: cover;
         top: 0;
         left: 0;
+        @media screen and (max-width: 980px) {
+            background: none;
+        }
+        
     }
     & .typo {
         position: absolute;
