--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -1,5 +1,5 @@
 footer {
-    border-top: 1px solid #c1c1c1;
+    border-top: 1px solid #e1e1e1;
     & .boundary {
         max-width: $pageWidth;
         margin: 0 auto;
