--- a/src/styles/_cart.scss
+++ b/src/styles/_cart.scss
@@ -5,7 +5,7 @@
     width: 100%;
     height: 115px;
     background: #fff;
-    border-top: 1px solid #e1e1e1;
+    border-top: 1px solid #c1c1c1;
     @include transition(all 0.25s ease);
     // @include box-shadow(0 0px 5px #e1e1e1);
     @media screen and (max-width: 700px) {
