--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -68,19 +68,25 @@ a {
     @media screen and (max-width: 980px) {
         margin-top: 0;
     }
-    & .title {
-        
-    }
     & section {
-        padding: 90px 0 100px 0;
+        @media screen and (max-width: 980px) {
+            padding: 0 !important;
+        }
         & .boundary {
             position: relative;
             margin: 0 auto;
             max-width: $pageWidth;
+            padding: 90px 0 100px 0;
+            @media screen and (max-width: 980px) {
+                padding: 50px 0;
+            }
         }
         & .section-title {
             margin-bottom: 55px;
             text-align: center;
+            @media screen and (max-width: 500px) {
+                margin-bottom: 30px;
+            }
             & h2 {
                 font-size: 2.000em;
                 line-height: 43px;
@@ -88,6 +94,13 @@ a {
             & p {
                 margin-top: 8px;
                 font-size: 1.063em;
+                line-height: 1.3;
+                & br {
+                    display: none;
+                    @media screen and (max-width: 500px) {
+                        display: block;
+                    }
+                }
             }
             
         }
