--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,5 @@
 <div class="boundary">
-    <div class="left"><span class="logo">HERELOGO</span></div>
+    <div class="left"><span class="logo">두리산농장</span></div>
     <div class="right">
         <dl class="info">
             <dt>두리산버섯농장</dt><dd>경상북도 상주시 모동면 이동6길 117</dd><br>
