--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -19,14 +19,14 @@ header {
             & ul li {
                 font-size: 1.063em !important;
                 font-weight: 400;
-                margin-right: 15px !important;
             }
         }
     }
     &.second-header {
         position: fixed;
         margin-top: 0;
-        top: -45px;
+        top: -65px;
+        height: 65px;
         opacity: 0;
         background: #fff;
         & .menu {
@@ -35,15 +35,13 @@ header {
                 margin-right: 0 !important;
                 & ul li {
                     margin-right: 15px !important;
+                    line-height: 55px;
                 }
             }
             & ul li {
-                font-size: 0.938em !important;
+                font-size: 1.063em !important;
                 margin-right: 40px;
             }
-        }
-        & .logo h1 .logo-image {
-            background: transparent;
         }
     }
     &.hidden {
@@ -60,10 +58,10 @@ header {
             }
         }
         & .logo h1 .logo-image {
-            line-height: 45px;
-            width: 90px;
-            text-indent: inherit;
-            background: transparent;
+            line-height: 55px;
+            width: 45px;
+            height: 40px;
+            background-position: 0 -55px;
         }
     }
     & .logo {
@@ -73,18 +71,23 @@ header {
             color: #fff;
         }
         & h1 {
-            margin: 0;
+            margin: 8px 0;
             font-size: 1.063em;
             font-weight: bolder;
             & .logo-image {
                 display: block;
                 overflow: hidden;
-                width: 175px;
+                width: 165px;
                 height: 45px;
                 background-position: 0 0;
                 text-indent: 101%;
                 white-space: nowrap;
                 background: transparent url("/assets/images/logo_doori.png") no-repeat;
+                @media screen and (max-width: 980px) {
+                    width: 110px;
+                    height: 80px;
+                    background-position: -171px 0;
+                }
             }
         }
     }
@@ -107,12 +110,18 @@ header {
                 margin-right: 50px;
                 font-size: 1.188em;
                 font-weight: 300;
-                line-height: 45px;
+                line-height: 55px;
                 @media screen and (max-width: 980px) {
                     font-size: 0.938em;
-                    margin-right: 25px;
+                    margin-right: 8px;
+                    line-height: 35px;
                     &:nth-child(1), &:nth-child(4) {
                         display: none;
+                    }
+                    &:nth-child(2)::after {
+                        content: "|";
+                        margin-left: 8px;
+                        font-size: 1.063em;
                     }
                 }
                 &.selected {
