--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -11,13 +11,14 @@ header {
     @media screen and (max-width: 980px) {
         position: absolute;
         top: 0;
+        margin-top: 10px;
         padding: 5px 15px 5px 25px;
         background: transparent;
         & .menu {
             color: #fff;
             margin-right: 0 !important;
             & ul li {
-                font-size: 1.063em !important;
+                font-size: 1.063em;
                 font-weight: 400;
             }
         }
@@ -29,17 +30,21 @@ header {
         height: 65px;
         opacity: 0;
         background: #fff;
+        @media screen and (max-width: 980px) {
+            height: 55px;
+        }
         & .menu {
             color: $titleColor !important;
             @media screen and (max-width: 980px) {
                 margin-right: 0 !important;
                 & ul li {
                     margin-right: 15px !important;
-                    line-height: 55px;
+                    line-height: 47px;
+                    font-size: 0.938em !important;
                 }
             }
             & ul li {
-                font-size: 1.063em !important;
+                font-size: 1.063em;
                 margin-right: 40px;
             }
         }
@@ -59,9 +64,16 @@ header {
         }
         & .logo h1 .logo-image {
             line-height: 55px;
-            width: 45px;
+            width: 40px;
             height: 40px;
             background-position: 0 -55px;
+            @media screen and (max-width: 980px) {
+                width: 30px;
+                height: 32px;
+                background: transparent url("/assets/images/logo_e.png") no-repeat;
+                background-size: 100% auto;
+                background-position: 0 0;
+            }
         }
     }
     & .logo {
@@ -77,16 +89,19 @@ header {
             & .logo-image {
                 display: block;
                 overflow: hidden;
-                width: 165px;
+                width: 160px;
                 height: 45px;
                 background-position: 0 0;
                 text-indent: 101%;
                 white-space: nowrap;
                 background: transparent url("/assets/images/logo_doori.png") no-repeat;
                 @media screen and (max-width: 980px) {
-                    width: 110px;
-                    height: 80px;
-                    background-position: -171px 0;
+                    width: 90px;
+                    height: 75px;
+                    background: transparent url("/assets/images/logo_b_wh.png") no-repeat;
+                    background-size: 100% auto;
+                    background-position: 0 0;
+                    
                 }
             }
         }
