--- a/src/styles/_media.scss
+++ b/src/styles/_media.scss
@@ -57,7 +57,7 @@
                         margin-bottom: 0;
                         font-size: 2.000em;
                         font-weight: normal;
-                        line-height: 38px;
+                        line-height: 1.3;
                         color: $titleColor;
                     }
                     & p {
@@ -134,7 +134,7 @@
                             transform: scale(1, 1);
                         }
                         & .bg {
-                            opacity: 0;
+                            opacity: .3;
                         }
                     }
                     & .image {
@@ -150,9 +150,21 @@
                         left: 0;
                         width: 100%;
                         height: 100%;
-                        background-color: #000;
-                        opacity: .4;
+                        background-color: #27282d;
+                        opacity: .6;
                         @include transition(opacity .6s ease);
+                        &:after {
+                            position: absolute;
+                            top: 0;
+                            bottom: 0;
+                            left: 0;
+                            right: 0;
+                            content: '';
+                            background: -webkit-linear-gradient(top, rgba(39,40,45,0) 0%, rgba(39,40,45,0.5) 80%);
+                            background: -moz-linear-gradient(top, rgba(39,40,45,0) 0%, rgba(39,40,45,0.5) 80%);
+                            background: -o-linear-gradient(top, rgba(39,40,45,0) 0%, rgba(39,40,45,0.5) 80%);
+                            background: linear-gradient(to bottom, rgba(39,40,45,0) 0%, rgba(39,40,45,0.5) 80%);
+                        }
                     }
                     & .typo {
                         position: absolute;
@@ -161,18 +173,22 @@
                         color: #fff;
                         width: 100%;
                         padding: 55px 45px;
-                        text-align: justify;
+                        @media screen and (max-width: 500px) {
+                            padding: 0 35px 75px 35px;
+                        }
                         & h2 {
                             margin: 0;
-                            font-size: 1.688em;
-                            font-weight: normal;
-                            line-height: 1.5;
+                            font-family: 'Noto Sans KR', sans-serif;
+                            font-size: 1.750em;
+                            font-weight: 300;
+                            line-height: 1.3;
                             color: #fff;
                         }
                         & p {
+                            text-align: justify;
                             margin: 8px 0 0 0;
                             font-size: 1.063em;
-                            font-weight: 200;
+                            font-weight: 300;
                             line-height: 1.3;
                             opacity: .9;
                         }
