--- a/src/styles/_store.scss
+++ b/src/styles/_store.scss
@@ -253,14 +253,27 @@
                     }
                     & .soldout-msg {
                         display: inline-block;
-                        margin-top: 10px;
+                        margin-top: 15px;
                         font-size: 1.063em;
-                        line-height: 35px;
+                        line-height: 34px;
+                        @media screen and (max-width: 500px) {
+                            margin-top: 0;
+                        }
                     }
                     & .soldout-reason {
                         display: inline-block;
-                        margin-top: 10px;
-                        line-height: 35px;
+                        margin-top: 24px;
+                        margin-left: 3px;
+                        overflow: hidden;
+                        width: 16px;
+                        height: 16px;
+                        background-position: 0 0;
+                        background-size: 100% auto !important;
+                        text-indent: 101%;
+                        background: transparent url("/assets/images/help.png") no-repeat;
+                        @media screen and (max-width: 500px) {
+                            margin-top: 9px;
+                        }
                     }
                 }
             }
