--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,3 +10,4 @@
 <div class="cart"></div>
 <a [class.visible]="topButtonVisible" (click)="goToTop($event)" href="#" class="go-to-top"><i class="icon-top"></i></a>
 <footer></footer>
+<div class="ng-tooltip"></div>
