--- a/src/styles/_cart.scss
+++ b/src/styles/_cart.scss
@@ -1,6 +1,6 @@
 .cart {
     position: fixed;
-    z-index: 10;
+    z-index: 101;
     bottom: -115px;
     width: 100%;
     height: 115px;
@@ -56,6 +56,18 @@
             & dt {
                 font-size: 0.938em;
                 color: #999;
+                & .shipping-tip {
+                    display: inline-block;
+                    margin-top: 4px;
+                    margin-left: 3px;
+                    overflow: hidden;
+                    width: 14px;
+                    height: 14px;
+                    background-position: 0 0;
+                    background-size: 100% auto !important;
+                    text-indent: 101%;
+                    background: transparent url("/assets/images/help.png") no-repeat;
+                }
             }
             & dd {
                 font-size: 1.063em;
