--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -6,8 +6,17 @@
             <dt>사업자등록번호</dt><dd>605-94-91120</dd><span class="bar"></span>
             <dt>통신판매업번호</dt><dd>제2017-전라도-000호</dd><br>
             <dt>전화</dt><dd>010-1234-5678</dd><span class="bar"></span>
-            <dt>이메일</dt><dd>admin@naver.com</dd><span class="bar"></span>
+            <dt>이메일</dt><dd>doorisan52@gmail.com</dd><span class="bar"></span>
             <dt>대표자</dt><dd>서중교</dd>
         </dl>
+        <div class="marks">
+            <span class="icon">
+                <form name='CERTMARK_FORM' METHOD='POST' style="display: inline">
+                    <input type="hidden" name="certMarkURLKey">
+                </form>
+                <a href="javascript:onPopCertMar('0f018091bf7a0b29c90bb26d208f7f95')"><img src='https://escrow.nonghyup.com/images/IC/es/img_nh_mark02.gif' alt='에스크로이체로 결제하기' border='0'/></a>
+            </span>
+            <span class="icon"><a href="https://www.instagram.com/doorisan_farmer/" target="_blank" class="instagram">인스타그램</a></span>
+        </div>
     </div>
 </div>
