--- a/src/app/media/box.component.html
+++ b/src/app/media/box.component.html
@@ -1,21 +1,19 @@
-<ng-template [ngIf]="args.type=='a' || args.type=='b'">
-    <div class="source">
-            <youtube-player *ngIf="!deviceService.isMobile && args.videos[0]" [videoId]="args.videos[0]" [width]="args.type == 'a' ? 890 : 400" [height]="550" [playerVars]="playerOptions" (ready)="setPlayer($event, 0)" (change)="onStateChange($event, 0)"></youtube-player>
+<div class="source">
+    <youtube-player *ngIf="!deviceService.isMobile && args.video" [videoId]="args.video" [width]="boxWidth" [height]="boxHeight" [playerVars]="playerOptions" (ready)="setPlayer($event, 0)" (change)="onStateChange($event, 0)"></youtube-player>
+</div>
+<div class="cover over-event" (mouseenter)="mouseOver(0)" (mouseleave)="mouseOut()" [class.focus]="coverViewStates[0] == 'active'">
+    <div class="image" [@fade]="coverImageViewStates[0]" [style.background-image]="'url('+args.image+')'"></div>
+    <div class="bg"></div>
+    <div class="typo">
+        <h2>{{args.title}}</h2>
+        <p>{{args.desc}}</p>
+        <p class="date">{{args.date}}</p>
     </div>
-    <div class="cover over-event" (mouseenter)="mouseOver(0)" (mouseleave)="mouseOut()" [class.focus]="coverViewStates[0] == 'active'">
-        <div class="image" [@fade]="coverImageViewStates[0]" [style.background-image]="'url('+args.images[0]+')'"></div>
-        <div class="bg"></div>
-        <div class="typo">
-            <h2>{{args.title}}</h2>
-            <p>{{args.desc}}</p>
-            <p class="date">{{args.date}}</p>
-        </div>
-    </div>
-</ng-template>
-<ng-template [ngIf]="args.type=='c'">
+</div>
+<!-- <ng-template [ngIf]="args.type=='c'">
     <div class="part top">
         <div class="source">
-            <!-- <youtube-player *ngIf="args.videos[0]" [videoId]="args.videos[0]" [width]="400" [height]="275" [playerVars]="playerOptions" (ready)="setPlayer($event, 0)" (change)="onStateChange($event, 0)"></youtube-player> -->
+            <youtube-player *ngIf="args.videos[0]" [videoId]="args.videos[0]" [width]="400" [height]="275" [playerVars]="playerOptions" (ready)="setPlayer($event, 0)" (change)="onStateChange($event, 0)"></youtube-player>
         </div>
         <div class="cover over-event" (mouseenter)="mouseOver(0)" (mouseleave)="mouseOut()" [class.focus]="coverViewStates[0] == 'active'">
             <div class="image" [@fade]="coverImageViewStates[0]" [style.background-image]="'url('+args.images[0]+')'"></div>
@@ -24,7 +22,7 @@
     </div>
     <div class="part bottom">
         <div class="source">
-            <!-- <youtube-player *ngIf="args.videos[1]" [width]="430" [height]="300" [playerVars]="playerOptions" (ready)="setPlayer($event, 1)" (change)="onStateChange($event, 1)"></youtube-player> -->
+            <youtube-player *ngIf="args.videos[1]" [width]="430" [height]="300" [playerVars]="playerOptions" (ready)="setPlayer($event, 1)" (change)="onStateChange($event, 1)"></youtube-player>
         </div>
         <div class="cover over-event" (mouseenter)="mouseOver(1)" (mouseleave)="mouseOut()" [class.focus]="coverViewStates[1] == 'active'">
             <div class="image" [@fade]="coverImageViewStates[1]" [style.background-image]="'url('+args.images[1]+')'"></div>
@@ -36,4 +34,4 @@
             </div>
         </div>
     </div>
-</ng-template>
+</ng-template> -->
